--- a/bower.json
+++ b/bower.json
@@ -41,7 +41,7 @@
     "url": "https://github.com/Leaflet/Leaflet.draw.git"
   },
   "dependencies": {
-    "leaflet-dist": "0.7.3"
+    "leaflet": "~0.7.3"
   },
   "devDependencies": {
     "leaflet": "~0.7.0",
